--- a/RemTool/ClientApp/src/index.html
+++ b/RemTool/ClientApp/src/index.html
@@ -1,13 +1,15 @@
-﻿<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Angular in ASP.NET Core</title>
-    <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <meta charset="utf-8">
+  <meta name='viewport' content='width=device-width,initial-scale=1,srink-to-fit=no'/>
+  <title>Remtool</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <app>Загрузка...</app>
+  <app-root></app-root>
 </body>
 </html>
