--- a/RemTool/ClientApp/src/index.html
+++ b/RemTool/ClientApp/src/index.html
@@ -1,15 +1,30 @@
 <!doctype html>
 <html lang="ru">
+
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EXHWS332VE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-EXHWS332VE');
+  </script>
   <meta charset="utf-8">
-  <meta name='viewport' content='width=device-width,initial-scale=1,srink-to-fit=no'/>
-  <title>Remtool</title>
+  <!-- <meta name='viewport' content='width=device-width,initial-scale=1,srink-to-fit=no'/> -->
+  <title>Ремтул - ремонт строительного инструмента</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, max-scale=1">
+  <meta name="description"
+    content="РемТул - это профессиональный ремонт строительного инструмента. Наш сервисный центр производит профессиональное обслуживание и ремонт строительного инструмента любых производителей.">
+  <meta name="robots" content="index, follow" />
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
