--- a/RemTool/ClientApp/src/index.html
+++ b/RemTool/ClientApp/src/index.html
@@ -34,6 +34,7 @@
   <!-- <meta name='viewport' content='width=device-width,initial-scale=1,srink-to-fit=no'/> -->
   <title>Ремтул - ремонт строительного инструмента</title>
   <base href="/">
+  <meta name="fragment" content="!">
   <meta name="viewport" content="width=device-width, initial-scale=1, max-scale=1">
   <meta name="description"
     content="РемТул - это профессиональный ремонт строительного инструмента. Наш сервисный центр производит профессиональное обслуживание и ремонт строительного инструмента любых производителей.">
