--- a/RemTool/ClientApp/src/index.html
+++ b/RemTool/ClientApp/src/index.html
@@ -39,6 +39,7 @@
   <meta name="description"
     content="РемТул - это профессиональный ремонт строительного инструмента. Наш сервисный центр производит профессиональное обслуживание и ремонт строительного инструмента любых производителей.">
   <meta name="robots" content="index, follow" />
+  <meta name="fragment" content="!">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
