--- a/RemTool/wwwroot/snippets/benzo.html
+++ b/RemTool/wwwroot/snippets/benzo.html
@@ -53,8 +53,8 @@
                 <div _ngcontent-gcr-c32="" class="header__topper"><span _ngcontent-gcr-c32=""
                         class="header__hours">График работы: пн-пт 10:00-20:00</span><a _ngcontent-gcr-c32=""
                         target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD" class="header__adress">Наш адрес:
-                        г.Москва, МГСА №256</a><a _ngcontent-gcr-c32="" href="tel: +7 (926) 247 86 03"
-                        class="header__mob-phone"> +7(926)247-86-03 </a>
+                        г.Москва, МГСА №256</a><a _ngcontent-gcr-c32="" href="tel: +7 (915) 387 29 99"
+                        class="header__mob-phone"> +7(915)3872999 </a>
                     <app-send-request _ngcontent-gcr-c32="" _nghost-gcr-c31=""><button _ngcontent-gcr-c31=""
                             class="button_light"> Оставить заявку
                         </button>
@@ -94,8 +94,8 @@
                         </li>
                         <!---->
                         <li _ngcontent-gcr-c32="" class="header__phone"><a _ngcontent-gcr-c32=""
-                                href="tel: +7 (926) 247 86 03"><img _ngcontent-gcr-c32=""
-                                    src="assets/img/phone-icon.svg" alt=""> +7(926)247-86-03 </a></li>
+                                href="tel: +7 (915) 387 29 99"><img _ngcontent-gcr-c32=""
+                                    src="assets/img/phone-icon.svg" alt=""> +7(915)3872999 </a></li>
                     </ul>
                     <!---->
                     <!---->
@@ -193,8 +193,8 @@
                             для отдыха</a><a _ngcontent-gcr-c32="" href="/tools/garden">Садовая техника</a><a
                             _ngcontent-gcr-c32="" href="/tools/heatgun">Тепловые пушки</a></div>
                     <div _ngcontent-gcr-c32="" class="footer__contacts"><a _ngcontent-gcr-c32=""
-                            href="tel: +7 (926) 247 86 03">+7(926)247-86-03</a><a _ngcontent-gcr-c32=""
-                            href="mailto:remtool@mail.ru">remtool@mail.ru</a><a _ngcontent-gcr-c32="" target="_blank"
+                            href="tel: +7 (915) 387 29 99">+7(915)3872999</a><a _ngcontent-gcr-c32=""
+                            href="mailto:remtul@list.ru">remtul@list.ru</a><a _ngcontent-gcr-c32="" target="_blank"
                             href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
                         <table _ngcontent-gcr-c32="" class="contacts__hours">
                             <tr _ngcontent-gcr-c32="">
