--- a/RemTool/wwwroot/snippets/electro.html
+++ b/RemTool/wwwroot/snippets/electro.html
@@ -53,7 +53,7 @@
         <div _ngcontent-kch-c32="" class="header__topper"><span _ngcontent-kch-c32="" class="header__hours">График
             работы: пн-пт 10:00-20:00</span><a _ngcontent-kch-c32="" target="_blank"
             href="https://yandex.ru/maps/-/CCUEb2QElD" class="header__adress">Наш адрес: г.Москва, МГСА №256</a><a
-            _ngcontent-kch-c32="" href="tel: +7 (915) 387 29 99" class="header__mob-phone"> +7(915)3872999 </a>
+            _ngcontent-kch-c32="" href="tel: +7 (915) 387 29 99" class="header__mob-phone"> +7 (915) 387 29 99 </a>
           <app-send-request _ngcontent-kch-c32="" _nghost-kch-c31=""><button _ngcontent-kch-c31="" class="button_light">
               Оставить заявку
             </button>
@@ -93,7 +93,7 @@
             </li>
             <!---->
             <li _ngcontent-kch-c32="" class="header__phone"><a _ngcontent-kch-c32="" href="tel: +7 (915) 387 29 99"><img
-                  _ngcontent-kch-c32="" src="assets/img/phone-icon.svg" alt=""> +7(915)3872999 </a></li>
+                  _ngcontent-kch-c32="" src="assets/img/phone-icon.svg" alt=""> +7 (915) 387 29 99 </a></li>
           </ul>
           <!---->
           <!---->
@@ -208,7 +208,7 @@
               отдыха</a><a _ngcontent-kch-c32="" href="/tools/garden">Садовая техника</a><a _ngcontent-kch-c32=""
               href="/tools/heatgun">Тепловые пушки</a></div>
           <div _ngcontent-kch-c32="" class="footer__contacts"><a _ngcontent-kch-c32=""
-              href="tel: +7 (915) 387 29 99">+7(915)3872999</a><a _ngcontent-kch-c32=""
+              href="tel: +7 (915) 387 29 99">+7 (915) 387 29 99</a><a _ngcontent-kch-c32=""
               href="mailto:remtul@list.ru">remtul@list.ru</a><a _ngcontent-kch-c32="" target="_blank"
               href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
             <table _ngcontent-kch-c32="" class="contacts__hours">
