--- a/RemTool/wwwroot/snippets/rest.html
+++ b/RemTool/wwwroot/snippets/rest.html
@@ -54,7 +54,7 @@
                         class="header__hours">График работы: пн-пт 10:00-20:00</span><a _ngcontent-vom-c32=""
                         target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD" class="header__adress">Наш адрес:
                         г.Москва, МГСА №256</a><a _ngcontent-vom-c32="" href="tel: +7 (915) 387 29 99"
-                        class="header__mob-phone"> +7(915)3872999 </a>
+                        class="header__mob-phone"> +7 (915) 387 29 99 </a>
                     <app-send-request _ngcontent-vom-c32="" _nghost-vom-c31=""><button _ngcontent-vom-c31=""
                             class="button_light"> Оставить заявку
                         </button>
@@ -95,7 +95,7 @@
                         <!---->
                         <li _ngcontent-vom-c32="" class="header__phone"><a _ngcontent-vom-c32=""
                                 href="tel: +7 (915) 387 29 99"><img _ngcontent-vom-c32=""
-                                    src="assets/img/phone-icon.svg" alt=""> +7(915)3872999 </a></li>
+                                    src="assets/img/phone-icon.svg" alt=""> +7 (915) 387 29 99 </a></li>
                     </ul>
                     <!---->
                     <!---->
@@ -138,7 +138,7 @@
                             для отдыха</a><a _ngcontent-vom-c32="" href="/tools/garden">Садовая техника</a><a
                             _ngcontent-vom-c32="" href="/tools/heatgun">Тепловые пушки</a></div>
                     <div _ngcontent-vom-c32="" class="footer__contacts"><a _ngcontent-vom-c32=""
-                            href="tel: +7 (915) 387 29 99">+7(915)3872999</a><a _ngcontent-vom-c32=""
+                            href="tel: +7 (915) 387 29 99">+7 (915) 387 29 99</a><a _ngcontent-vom-c32=""
                             href="mailto:remtul@list.ru">remtul@list.ru</a><a _ngcontent-vom-c32="" target="_blank"
                             href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
                         <table _ngcontent-vom-c32="" class="contacts__hours">
